src/components/react/Lifecycle/Lifecycle.module.scss
@use '../../../styles/mixins';

.path {
  stroke: var(--color-border);
}

.card {
  position: absolute;
  width: 64px;
  padding-top: 0;
  padding-bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--color-bg);
  z-index: 1;
  width: 128px;
  > p {
    color: var(--color-text-primary);
  }
}

.root {
  position: relative;
  display: none;

  @media (min-width: 984px) {
    display: block;
  }
}

.descriptionCard {
  display: flex;
  flex-direction: column;
}

.test {
  position: absolute;
  inset: 0;
  &::before,
  &::after {
    content: '';
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    bottom: 0;
    width: 4rem;
    height: 4rem;
  }
  &::before {
    left: 0;
    background: linear-gradient(to right, var(--color-bg), transparent);
  }
  &::after {
    right: 0;
    background: linear-gradient(to left, var(--color-bg), transparent);
  }
}

.lifecycleDesktopCard {
  @include mixins.card-desktop;
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: var(--space-xs);
  cursor: default;
  background-color: var(--color-bg-secondary);
  transition: all 1000ms ease-in-out;

  > svg {
    @include mixins.card-bg-icon;

    & {
      fill: var(--color-text-tertiary);
    }
  }

  * {
    cursor: inherit;
  }

  > div {
    @include mixins.gradient-border(
      var(--color-accent-primary),
      var(--color-accent-primary),
      transparent,
      2px
    );
    background-color: var(--color-accent-primary-10);
    border-radius: inherit;
    position: absolute;
    inset: 0px;
    z-index: -1;
    opacity: 0;
    transition: opacity 200ms ease-in-out;
  }

  &:hover,
  &.active {
    > div {
      opacity: 1;
    }
    > svg {
      fill: var(--color-accent-primary);
    }
  }
}

.pointIcon {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  background-color: var(--color-bg);
}

.pointBg {
  position: absolute;
  width: 150%;
  height: 150%;
  border-radius: 50%;
  z-index: -1;
  background-color: var(--color-accent-primary);
  filter: blur(20px) saturate(1.5);
}

.pointIconCurrent {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
}

.lifecycleMobile {
  display: flex;
  flex-direction: column;
  margin-left: calc(var(--main-padding-x) * -1);
  margin-right: calc(var(--main-padding-x) * -1);

  @media (min-width: 984px) {
    display: none;
  }
}

.lifecyleMobileCard {
  display: flex;
  flex-direction: column;
  position: relative;
  overflow: hidden;
  color: var(--color-text-secondary);
  padding: var(--space-xxl) var(--space-xl);

  @media (min-width: 984px) {
    @include mixins.gradient-border;
    min-height: 14rem;
  }

  svg {
    width: 10rem;
    height: 10rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: -1;
    opacity: 0.1;

    @media (min-width: 984px) {
      width: 20rem;
      transform: translate(-25%, 25%);
      right: unset;
      left: 0;
    }
  }
}

